--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,6 @@
   <title>📊 NovaTicker 리치</title>
   <link rel="stylesheet" href="/static/style.css" />
   <style>
-    /* 기존 스타일은 생략 없이 그대로 유지됨 */
     body {
       font-family: 'Segoe UI', 'Pretendard', sans-serif;
       background-color: #0d1117;
@@ -99,8 +98,9 @@
       background: transparent;
       border: none;
       color: #f85149;
-      font-size: 1.2em;
+      font-size: 1.4em;
       cursor: pointer;
+      z-index: 2;
     }
     h3 {
       text-align: left;
